--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "new_journal",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +13,9 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.4",
     "path": "^0.12.7"
-  }
+  },
+  "description": ""
 }
